# fuzzy-octo-archer

./: README.md
AIGoJudge/AIGoJudge/: AIGoJudge-Prefix.pch  FOAViewController.m
AIGoJudge/AIGoJudge.xcodeproj/: project.pbxproj
AIGoJudge/AIGoJudge.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AIGoJudge/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
FaceAging/AIGoJudge/: FOAFinderUtil.m  FOAViewController.m  FaceAgingWrapper.h
FaceAging/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
FaceAging/CppWrapper/: FaceAging.cpp  FaceAging.h  IO.h  Tracker.cc
FaceAging/CppWrapper/CppWrapper/: FaceAgingWrapper.h  FaceAgingWrapper.mm
FaceAging/FaceAging_CPP/FaceAging/: FaceAgingTarget.xcconfig  IO.h
FaceAging/FaceAging_CPP/FaceAging_CPP.xcodeproj/: project.pbxproj
FaceAging/FaceAging_iOS.xcodeproj/: project.pbxproj
FaceAging/FaceAging_iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FaceFeature/AIGoJudge/: FOAViewController.h  FOAViewController.m
FaceFeature/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
FaceFeature/CppWrapper/: COPYRIGHT  HOWTOUSE  INSTALL  Package.cmake.in  README  vosm.sln  vosmConfig.cmake.in  vosmModule.cmake
FaceFeature/CppWrapper/CppWrapper_FaceAging.xcodeproj/: project.pbxproj
FaceFeature/CppWrapper/modules/: CMakeLists.txt
FaceFeature/FaceFeature_CPP/FaceAging/: CLM.cc  CLM.h  FCheck.h  FDet.h  Patch.cc  Tracker.h  delaunay.h  imgwarp_piecewiseaffine.cpp  main.cpp
FaceFeature/FaceFeature_CPP/FaceFeature_CPP.xcodeproj/: project.pbxproj
FaceFeature/FaceFeature_iOS.xcodeproj/: project.pbxproj
FaceFeature/FaceFeature_iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FaceTracker/AIGoJudge/: FOAFinderUtil.h  FOAViewController.h  FOAViewController.m
FaceTracker/AIGoJudge/en.lproj/: MainStoryboard_iPhone.storyboard
FaceTracker/CppWrapper/: FCheck.cc  IO.cc  imgwarp_mls.h
FaceTracker/CppWrapper/CppWrapper_FaceAging.xcodeproj/: project.pbxproj
FaceTracker/FaceAging_CPP/FaceAging/: FaceAging.cp  FaceAging.h
FaceTracker/FaceAging_CPP/FaceTracker_CPP.xcodeproj/: project.pbxproj
FaceTracker/FaceTracker.xcodeproj/: project.pbxproj
ImageFileCompressComparsion/AIGoJudge/: FOANavigationBar.m  FOAViewController.m  ImageFileCompressComparsion-Info.plist
ImageFileCompressComparsion/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
ImageFileCompressComparsion/ImageFileCompressComparsion.xcodeproj/: project.pbxproj
ImageFileCompressComparsion/ImageFileCompressComparsion.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KoreanOCR/AIGoJudge/: FOAViewController.m
KoreanOCR/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
KoreanOCR/KoreanOCR.xcodeproj/: project.pbxproj
KoreanOCR/KoreanOCR.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LandMark/: ._locByTracking  lipo_static_library_ios_simulator_shell
LandMark/AIGoJudge/en.lproj/: MainStoryboard_iPad.storyboard
LandMark/CppWrapper/: IO.h  PAW.h  PDM.cc  main.cpp
LandMark/FaceAging_CPP/FaceAging/: IO.cc  IO.h  PAW.cc  imgwarp_mls.h
LandMark/FaceAging_CPP/FaceAging_CPP.xcodeproj/: project.pbxproj
LandMark/LandMark_CPP/FaceAging/: ._locByTracking.sln  ._main.cpp  ._tracker.h  tracker.cpp
LandMark/LandMark_CPP/LandMark_CPP.xcodeproj/: project.pbxproj
LandMark/LandMark_CppWrapper/: ._tracker.cpp  LandMark.h  main.cpp
LandMark/LandMark_CppWrapper/CppWrapper/: LandMarkWrapper.h  LangMarkWrapper.mm
LandMark/LandMark_CppWrapper/CppWrapper_LandMark.xcodeproj/: project.pbxproj
LandMark/LandMark_iOS.xcodeproj/: project.pbxproj
LandMark/LandMark_iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LandMark/locByTracking/: locByTracking.sln
LandMark/locByTracking/locByTracking/: ._Release  ._locByTracking.vcxproj  ._locByTracking.vcxproj.filters  (+5 more)
LeanFace/: LeanFaceService.cpp  README.md
LeanFace/LeanFace/: FDet.cc  Patch.h
LeanFace/LeanFace.xcodeproj/: project.pbxproj
LeanFace/Thrift/: LeanFace.thrift
VOSM/CppWrapper/: AUTHORS  CHANGES  CMakeLists.txt  FaceAging.cpp  FaceAging.h  cvconfig.h.cmake  vosm.opensdf  vosm.pc.cmake.in
VOSM/CppWrapper/CppWrapper_FaceAging.xcodeproj/project.xcworkspace/xcuserdata/yangboz.xcuserdatad/: UserInterfaceState.xcuserstate
VOSM/CppWrapper/modules/comalgs/: comalgs.vcxproj
VOSM/CppWrapper/modules/common/: common.vcxproj.filters
VOSM/CppWrapper/modules/cvcommon/: cvcommon.vcxproj
VOSM/CppWrapper/modules/ensembletraining/: CMakeLists.txt  ensembletraining.vcxproj  ensembletraining.vcxproj.filters
VOSM/CppWrapper/modules/featureextraction/: featureextraction.vcxproj.filters
VOSM/CppWrapper/modules/integraltransform/: CMakeLists.txt
VOSM/CppWrapper/modules/smbuilding/: CMakeLists.txt  smbuilding.vcxproj  smbuilding.vcxproj.filters
VOSM/CppWrapper/modules/smfitting/: smfitting.vcxproj  smfitting.vcxproj.filters
VOSM/CppWrapper/tests/: CMakeLists.txt
VOSM/CppWrapper/tests/test_ensembletraining/: CMakeLists.txt  ensembletraining.cpp  test_ensembletraining.vcxproj  vo_ensembletraining.vcxproj.filters
VOSM/CppWrapper/tests/test_featureextraction/: CMakeLists.txt  featureextraction.cpp
VOSM/CppWrapper/tests/test_integraltransform/: CMakeLists.txt
VOSM/CppWrapper/tests/test_smbuilding/: CMakeLists.txt  smbuilding.cpp  test_smbuilding.vcxproj  test_smbuilding.vcxproj.filters
VOSM/CppWrapper/tests/test_smfitting/: CMakeLists.txt  smf.h  smfitting.cpp  test_smfitting.vcxproj  test_smfitting.vcxproj.filters
VOSM/VOSM_iOS.xcodeproj/: project.pbxproj
fuzzy-octo-archer/fuzzy-octo-archer/: FOAAppDelegate.h  FOAAppDelegate.m  FOANavigationBar.h  FOANavigationNar.h  FOANavigationNar.m  FOAViewController.h  FOAViewController.m  fuzzy-octo-archer-Info.plist  fuzzy-octo-archer-Prefix.pch  main.m
fuzzy-octo-archer/fuzzy-octo-archer.xcodeproj/: project.pbxproj
fuzzy-octo-archer/fuzzy-octo-archerTests/: fuzzy-octo-archerTests-Info.plist  fuzzy_octo_archerTests.m
(+197 files in other folders)
